test: 完善单元测试